Add avatar to user
